fixed sonarlint warning: created constants for return values and model attribute names